# oo-C-space-invaders

./: CMakeLists.txt  README.md  homework.md  main.c
inc/: alien.h  block.h  bomb.h  game.h  game_keypresses.h  hero.h  screen_obj_list.h  screen_object.h
src/: alien.c  block.c  bomb.c  game.c  hero.c  screen_obj_list.c  screen_object.c
